border-box to avoid overflow

--- a/css/utilities/dropdown.css
+++ b/css/utilities/dropdown.css
@@ -8,6 +8,7 @@
 .dropdown > button {
   width: 100%;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .dropdown > label {
