--- a/css/utilities/layout.css
+++ b/css/utilities/layout.css
@@ -9,10 +9,12 @@
 
 .w {
   width: 100%;
+  box-sizing: border-box;
 }
 
 .h {
   height: 100%;
+  box-sizing: border-box;
 }
 
 /*
